--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
     <section class="home" id="home">
         <div class="home-info">
             <p style="color: rgba(255, 0, 0, 0.836);">-Helloo</p>                
-            <h2>I'M Muhammad <span style="color: rgb(13, 73, 195);">Naufal</span> Chandra AR</h2>
+            <h2>I'M Muhammad <span style="color: rgb(14, 255, 195);">Naufal</span> Chandra AR</h2>
             <h3>I'm a
                 <span style="--i:0;" data-text="Student">Student</span>
                 <span style="--i:1;" data-text="Developer">Developer</span>
@@ -69,7 +69,7 @@
                     </div>
                 </div>
                 <div class="About-Me-2">
-                    <h1 class="sub-tittle" style="color: rgba(27, 13, 184, 0.734);">About Me</h1>
+                    <h1 class="sub-tittle" style="color: rgb(109, 255, 65);">About Me</h1>
                     <p>Halo semua perkenalkan nama saya Muhammad Naufal, saya lahir di Jakarta pada 24 Agustus 2008, 
                     saya berpendidikan di SMKN 40 Jakarta dan saya di SMKN 40 mengikuti kegiatan eskul pramuka, voli, dan hadroh.</p>
 
