--- a/portfolio.html
+++ b/portfolio.html
@@ -154,6 +154,7 @@
                     <h3>Location</h3>
                     <p>Jl.MultiKarya 3 Rt 009/ Rw 09 No.18, Jakarta Timur, DKI Jakarta</p>
                 </div>
+                <h5> &#169; Pencipta : Muhammad Naufal </h5>
             </div>
         </div>
     </section>
