--- a/portfolio.html
+++ b/portfolio.html
@@ -25,10 +25,10 @@
         <div class="home-info">
             <p style="color: rgba(255, 0, 0, 0.836);">-Helloo</p>                
             <h2>I'M Muhammad <span style="color: rgb(14, 255, 195);">Naufal</span> Chandra AR</h2>
-            <h3>I'm a
-                <span style="--i:0;" data-text="Student">Student</span>
-                <span style="--i:1;" data-text="Developer">Developer</span>
-                <span style="--i:2;" data-text="Designer">Designer</span>
+            <h3> I'm a
+                <span style="--i:3;" data-text="Student">Student</span>
+                <span style="--i:2;" data-text="Developer">Developer</span>
+                <span style="--i:1;" data-text="Designer">Designer</span>
             </h3>
 
             <p>Halo saya Muhammad Naufal, saya tinggal di Jakarta, saya dari sekolah SMKN 40 Jakarta.
@@ -36,7 +36,7 @@
             <div class="btn-sci">
                 <a href="CV opang.pdf" class="btn">Download CV</a>
                 <div class="sci">
-                    <a href="#"><i class="ri-whatsapp-line"></i></a>
+                    <a href="https://github.com/fall-aja"><i class="ri-github-fill"></i></a>
                     <a href="https://www.tiktok.com/@panggg_aja?_t=ZS-8ymOYBAue5n&_r=1"><i class="ri-tiktok-line"></i></a>
                     <a href="http://www.youtube.com/@fall.2408"><i class="ri-youtube-line"></i></a>
                     <a href="https://www.instagram.com/faallmhmmd/profilecard/?igsh=MXBpeXo0ZGgxamVxZA=="><i class="ri-instagram-line"></i></a>
@@ -54,6 +54,7 @@
             </div>
         </div>
     </section>
+    <h5 style=color:white> &#169; Pencipta : Muhammad Naufal C.A</h5>
 
     <section id="about">
         <div class="container">
@@ -105,6 +106,8 @@
                 </div>
             </div>
         </div>
+        <br>
+        <h5> &#169; Pencipta : Muhammad Naufal C.A</h5>
     </section>
 
 <section id="skill">
@@ -133,11 +136,31 @@
             </div>
         </div>
     </div>
+    <br>
+    <h5 style=color:white> &#169; Pencipta : Muhammad Naufal C.A</h5>
 </section>
 
 <section id="contact">
     <div class="container">
-        <h1 class="sub-tittle" style="color: rgba(255, 255, 255, 0.9); text-align: center;">Contact Me</h1>
+        <h1 class="sub-tittle" style="color: rgba(255, 255, 255, 0.9); text-align: center;"> <span style="color:#ff4907">Contact</span> Me</h1>
+
+<section class="contact-form">
+    <form action="#">
+        <div class="input-box">
+            <input type="text" placeholder="Nama Lengkap">
+            <input type="email" placeholder="Email">
+        </div>
+
+        <div class="input-box">
+            <input type="nomor" placeholder="Nomor Handphone">
+            <input type="text" placeholder="Subject">
+        </div>
+
+        <textarea name="" id="" cols="30" rows="5" placeholder="Isi Pesan"></textarea>
+        <input type="submit" value="Kirim Pesan" class="btn-1">
+    </form>
+</section>
+
             <div class="contact-info">
                 <div class="contact-item">
                     <i class="ri-mail-line"></i>
@@ -154,9 +177,10 @@
                     <h3>Location</h3>
                     <p>Jl.MultiKarya 3 Rt 009/ Rw 09 No.18, Jakarta Timur, DKI Jakarta</p>
                 </div>
-                <h5> &#169; Pencipta : Muhammad Naufal </h5>
             </div>
         </div>
+        <br>
+        <h5> &#169; Pencipta : Muhammad Naufal C.A</h5>
     </section>
 
     <script>
