--- a/portfolio.html
+++ b/portfolio.html
@@ -23,8 +23,8 @@
 
     <section class="home" id="home">
         <div class="home-info">
-            <p style="color: rgba(255, 0, 0, 0.836);">-Helloo</p>                
-            <h2>I'M Muhammad <span style="color: rgb(14, 255, 195);">Naufal</span> Chandra AR</h2>
+            <p style="color: rgb(255, 141, 47);">-Helloo</p>                
+            <h2>I'M Muhammad <span style="color: rgb(14, 255, 54);">Naufal</span> Chandra AR</h2>
             <h3> I'm a
                 <span style="--i:3;" data-text="Student">Student</span>
                 <span style="--i:2;" data-text="Developer">Developer</span>
@@ -70,7 +70,7 @@
                     </div>
                 </div>
                 <div class="About-Me-2">
-                    <h1 class="sub-tittle" style="color: rgb(109, 255, 65);">About Me</h1>
+                    <h1 class="sub-tittle" style="color:#ff4907">About <span style="color:#ffffff">Me</span></h1>
                     <p>Halo semua perkenalkan nama saya Muhammad Naufal, saya lahir di Jakarta pada 24 Agustus 2008, 
                     saya berpendidikan di SMKN 40 Jakarta dan saya di SMKN 40 mengikuti kegiatan eskul pramuka, voli, dan hadroh.</p>
 
@@ -112,7 +112,7 @@
 
 <section id="skill">
     <div class="container">
-    <h1 class="sub-tittle" style="color: rgba(255, 255, 255, 0.9); text-align: center;">My Skills</h1>
+    <h1 class="sub-tittle" style="color: rgba(255, 255, 255, 0.9); text-align: center;">My <span style="color:#ff4907">Skills</span></h1>
         <div class="Skill-List">
             <div>
             <i class="ri-code-s-slash-line"></i>
@@ -153,7 +153,7 @@
 
         <div class="input-box">
             <input type="nomor" placeholder="Nomor Handphone">
-            <input type="text" placeholder="Subject">
+            <input type="text" placeholder="Panggilan">
         </div>
 
         <textarea name="" id="" cols="30" rows="5" placeholder="Isi Pesan"></textarea>
@@ -176,6 +176,52 @@
                     <i class="ri-map-pin-line"></i>
                     <h3>Location</h3>
                     <p>Jl.MultiKarya 3 Rt 009/ Rw 09 No.18, Jakarta Timur, DKI Jakarta</p>
+                </div>
+            </div>
+        </div>
+<br>
+        <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-section">
+                <h3>Tentang Saya</h3>
+                <p>Saya adalah Seorang pelajar dari SMKN 40 Jakarta </p>
+            </div>
+            
+            <div class="footer-section">
+                <h3>Tautan</h3>
+                <ul class="footer-links">
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#About">About</a></li>
+                    <li><a href="#Skill">Skill</a></li>
+                    <li><a href="#Contact">Contact</a></li>
+                </ul>
+                <br>
+            </div>
+            <div class="footer-section">
+                <h3>Kontak Saya</h3>
+                <ul class="contact-info">
+                    <li>
+                        <i>📍</i>
+                        <span>Jl.MultiKarya 3 Rt 009/ Rw 09 No.18, Jakarta Timur, DKI Jakarta</span>
+                    </li>
+                    <li>
+                        <i>📞</i>
+                        <span>+62 813-1877-5548</span>
+                    </li>
+                    <li>
+                        <i>✉️</i>
+                        <span>chandra12naufal.com</span>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Ikuti Saya</h3>
+                <p>Ikuti akun media sosial saya untuk mendapatkan update terbaru.</p>
+                <div class="social-links">
+                    <a href="https://github.com/fall-aja"><i class="ri-github-fill"></i></a>
+                    <a href="https://www.tiktok.com/@panggg_aja?_t=ZS-8ymOYBAue5n&_r=1"><i class="ri-tiktok-line"></i></a>
+                    <a href="https://www.youtube.com/@fall.2408"><i class="ri-youtube-line"></i></a>
+                    <a href="https://www.instagram.com/faallmhmmd/profilecard/?igsh=MXBpeXo0ZGgxamVxZA=="><i class="ri-instagram-line"></i></a>
                 </div>
             </div>
         </div>
