--- a/portfolio.html
+++ b/portfolio.html
@@ -118,21 +118,21 @@
             <i class="ri-code-s-slash-line"></i>
             <h2>Web Design</h2>
             <p>Membuat desain website yang menarik dan responsif menggunakan HTML, CSS, dan JavaScript untuk memberikan pengalaman pengguna yang optimal.</p>
-            <a href="#">Learn More</a>
+            <a href="web.png">Klik Di Sini</a>
             </div>
 
             <div>
             <i class="ri-crop-line"></i>
             <h2>UI/UX Design</h2>
             <p>Merancang antarmuka pengguna yang intuitif dan pengalaman pengguna yang menyenangkan untuk aplikasi web dan mobile.</p>
-            <a href="#">Learn More</a>
+            <a href="#">Klik Di sini</a>
             </div>
                 
             <div>
             <i class="ri-app-store-line"></i>
             <h2>App Design</h2>
             <p>Mengembangkan aplikasi mobile yang fungsional dan menarik untuk platform Android dan iOS dengan performa yang optimal.</p>
-            <a href="#">Learn More</a>
+            <a href="figma.png">Klik Di sini</a>
             </div>
         </div>
     </div>
